--- a/riskcalculator/pom.xml
+++ b/riskcalculator/pom.xml
@@ -10,7 +10,7 @@
     </parent>
 
     <groupId>com.airwin</groupId>
-    <artifactId>riskmanager</artifactId>
+    <artifactId>riskcalculator</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
@@ -19,21 +19,12 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.fasterxml.jackson.datatype</groupId>
-            <artifactId>jackson-datatype-jsr310</artifactId>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
-            <version>3.3.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-mongodb</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.cloud</groupId>
@@ -42,7 +33,6 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.3.3</version>
         </dependency>
     </dependencies>
 </project>
