--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,10 @@
     <modules>
         <module>apigateway</module>
         <module>patientmanager</module>
-        <module>discoveryServer</module>
+        <module>eurekaserver</module>
         <module>riskmanager</module>
+        
+        <module>riskcalculator</module>
     </modules>
 
     <properties>
@@ -21,7 +23,6 @@
         <maven.compiler.target>21</maven.compiler.target>
     </properties>
     <dependencyManagement>
-
         <dependencies>
 
             <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
@@ -34,11 +35,6 @@
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-gateway-mvc</artifactId>
                 <version>4.1.5</version>
-            </dependency>
-            <dependency>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-starter-validation</artifactId>
-                <version>3.3.3</version>
             </dependency>
             <!--
             https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-dependencies -->
@@ -105,6 +101,11 @@
                 <version>3.3.3</version>
                 <type>pom</type>
                 <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+                <version>3.3.3</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
