--- a/riskmanager/pom.xml
+++ b/riskmanager/pom.xml
@@ -45,4 +45,26 @@
             <version>3.3.3</version>
         </dependency>
     </dependencies>
+    <build>
+        <finalName>RiskManager</finalName>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>repackage</goal>
+                        </goals>
+                        <configuration>
+                            <classifier>spring-boot</classifier>
+                            <mainClass>
+                                com.airwin.RiskManagerApp
+                            </mainClass>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
