--- a/apigateway/Dockerfile
+++ b/apigateway/Dockerfile
@@ -2,8 +2,8 @@ FROM openjdk:21
 
 WORKDIR /app
 
-COPY ${JAR_FILE} app.jar
+COPY target/apigateway-spring-boot.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar","/app/app.jar"]
