--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -1,6 +1,7 @@
 spring:
   r2dbc:
-    url: r2dbc:mysql://localhost:3306/userdb?serverTimezone=Europe/Paris
+    url: r2dbc:mysql://host.docker.internal:3306/userdb?serverTimezone=Europe/Paris # for prod
+    #url: r2dbc:mysql://localhost:3306/userdb?serverTimezone=Europe/Paris # for dev
     username: root
     password: rootroot
   application:
@@ -11,4 +12,6 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8083/eureka
+      defaultZone: http://host.docker.internal:8083/eureka #for prod
+      #defaultZone: http://localhost:8083/eureka #for dev
+debug: true
