--- a/eurekaserver/src/main/resources/application.properties
+++ b/eurekaserver/src/main/resources/application.properties
@@ -2,5 +2,6 @@ spring.application.name=eureka-server
 server.port=8083
 eureka.client.register-with-eureka=false
 eureka.client.fetch-registry=false
+server.address=0.0.0.0
 spring.cloud.inetutils.preferred-networks=127.0.0.1
-eureka.client.serviceUrl.defaultZone= http://localhost:8083/eureka
+eureka.client.serviceUrl.defaultZone= http://${server.address}:8083/eureka
