--- a/patientmanager/src/main/resources/application.yml
+++ b/patientmanager/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://localhost:3306/patienttest
+    url: jdbc:mysql://host.docker.internal:3306/patienttest
+    #url: jdbc:mysql://localhost:3306/patienttest # for dev
     username: root
     password: rootroot
   application:
@@ -12,11 +13,5 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8083/eureka
-logging:
-  level:
-    org:
-      springframework:
-        web:
-          filter:
-            CommonsRequestLoggingFilter: DEBUG
+      defaultZone: http://host.docker.internal:8083/eureka #for prod
+      #defaultZone: http://localhost:8083/eureka #for dev
