--- a/riskmanager/src/main/resources/application.yml
+++ b/riskmanager/src/main/resources/application.yml
@@ -1,7 +1,8 @@
 spring:
   data:
     mongodb:
-      host: localhost
+      host: host.docker.internal #for prod
+      #host: localhost #for dev
       port: 27017
       database: PatientNotedb
   application:
@@ -11,4 +12,5 @@ server:
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8083/eureka
+      defaultZone: http://host.docker.internal:8083/eureka #for prod
+      #defaultZone: http://localhost:8083/eureka #for dev
