--- a/apigateway/Dockerfile
+++ b/apigateway/Dockerfile
@@ -6,4 +6,4 @@ COPY target/apigateway-spring-boot.jar app.jar
 
 EXPOSE 8080
 
-ENTRYPOINT ["java","-jar","/app/app.jar"]
+ENTRYPOINT ["java","-jar","-Dspring.profiles.active=prod","/app/app.jar"]
