--- a/eurekaserver/Dockerfile
+++ b/eurekaserver/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:21
 WORKDIR /app
 COPY target/eurekaServer-1.0-spring-boot.jar app.jar
 EXPOSE 8083
-ENTRYPOINT ["java","-jar","/app/app.jar"]
+ENTRYPOINT ["java","-jar","-Dspring.profiles.active=prod","/app/app.jar"]
