--- a/patientmanager/Dockerfile
+++ b/patientmanager/Dockerfile
@@ -1,4 +1,4 @@
 FROM openjdk:21
 COPY target/Patientmanager-spring-boot.jar app.jar
 EXPOSE 8081
-ENTRYPOINT ["java","-jar","/app.jar"]
+ENTRYPOINT ["java","-jar","-Dspring.profiles.active=prod","/app.jar"]
