--- a/patientmanager/src/main/resources/application-prod.yml
+++ b/patientmanager/src/main/resources/application-prod.yml
@@ -2,16 +2,13 @@ spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://host.docker.internal:3306/patienttest
-    #url: jdbc:mysql://localhost:3306/patienttest # for dev
     username: root
     password: rootroot
   application:
     name: patientmanager
 server:
   port: 8081
-
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://host.docker.internal:8083/eureka #for prod
-      #defaultZone: http://localhost:8083/eureka #for dev
+      defaultZone: http://host.docker.internal:8083/eureka
